--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,8 +1,8 @@
 <div id="index-banner">
   <div class="row">
-    <div class="col l4 offset-l4 s8 offset-s2">
+    <div class="col l4 offset-l4 s6 offset-s3">
       <h1>
-         <img id="index-top-logo" src="{{ site.url }}/{{ site.data.home.banner }}" alt="Event logo">
+         <img id="index-top-logo" src="{{ site.url }}/{{ site.data.home.banner }}" alt="AISF Palermo logo">
       </h1>
     </div>
   </div>
