--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-{% assign navurl = page.url | remove: 'index.html' %}
+{% assign navurl = page.url | remove: '/' %}
 {% for item in include.nav %}
     {% if item.subitems %}
     <ul id="dropdown-{{ item.slug }}" class="dropdown-content">
@@ -13,7 +13,7 @@
 <nav class="custom1" role="navigation">
     <div class="nav-wrapper container">
         <a href="#" data-activates="nav-mobile" class="button-collapse hide-on-large-only"><i class="material-icons">menu</i></a>
-        <a id="logo-container" href="{{ site.url }}/index.html" class="brand-logo">{{ site.data.generic.title }}</a>
+        <a id="logo-container" href="{{ site.url }}/" class="brand-logo">{{ site.data.generic.title }}</a>
 
         <ul class="right hide-on-med-and-down">
           {% for item in include.nav %}
