--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,23 +3,26 @@
 
 
 <script> // Slider
-  $(document).ready(function(){
-  $('.slider').slider({full_width: false});
-  });
+  // $(document).ready(function(){
+  // $('.slider').slider({full_width: false});
+  // });
 </script>
 <script> // Initialize collapse button
-  $(".button-collapse").sideNav();
+  document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.sidenav');
+    var instances = M.Sidenav.init(elems, {});
+  });
   // Initialize collapsible (uncomment the line below if you use the dropdown variation)
-  $('.collapsible').collapsible();
+  //$('.collapsible').collapsible();
 </script>
 <script>
-  $(document).ready(function(){
+  //$(document).ready(function(){
   // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-  $('.modal-trigger').leanModal();
-  });
+  //$('.modal-trigger').leanModal();
+  //});
 </script>
 <script>
-  $(document).ready(function(){
-      $('.carousel').carousel();
-  });
+  // $(document).ready(function(){
+  //     $('.carousel').carousel();
+  // });
 </script>
