--- a/_layouts/corso_evento.html
+++ b/_layouts/corso_evento.html
@@ -50,6 +50,87 @@ credits:
 ---
 -->
 
+<div class="row">
+	<div class="col l8 offset-l2 m8 offset-m2 s8 offset-s2">
+		{% if page.locandina %}
+			<div class="card">
+				<div class="card-image">
+					<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 8px; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
+					<img src="{{ site.url }}/{{ page.locandina.url }}" alt="{{ page.locandina.alt }}">
+					{% if page.title %}
+						<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ page.title }}</span>
+					{% endif %}
+					<a id="add-calendar" class="btn-floating halfway-fab btn-large waves-effect waves-light custom1"><i class="material-icons">add</i></a id="add-calendar">
+				</div>
+				<div class="card-content">
+					<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+					{% if page.credits %}
+						<div class="thanks" style="margin-top: 8px; font-weight: bold; display:block;">Ringraziamenti:</div>
+						<p>{{ page.credits }}</p>
+					{% endif %}
+				</div>
+				{% if page.icon_block_list %}
+					{% include icon_block_list.html icons=page.icon_block_list %}
+				{% endif %}
+				<div class="card-action">
+					{% if page.social %}
+						{% if page.social.facebook %}
+							<a href="{{ page.social.facebook }}">Facebook</a>
+						{% else %}
+							<a href="{{ site.data.generic.facebook_url }}">Instagram</a>
+						{% endif %}
+						{% if page.social.instagram %}
+							<a href="{{ page.social.instagram }}">Instagram</a>
+						{% else %}
+							<a href="{{ site.data.generic.instagram_url }}">Instagram</a>
+						{% endif %}
+					{% endif %}
+				</div>
+			</div>
+		{% else %}
+			<div class="card white">
+				<div class="card-content">
+					{% if page.title %}
+						<span class="card-title" style="color: black;">{{ page.title }}</span>
+					{% endif %}
+					<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+					{% if page.credits %}
+						<div class="thanks" style="margin-top: 8px; font-weight: bold; display:block;">Ringraziamenti:</div>
+						<p>{{ page.credits }}</p>
+					{% endif %}
+				</div>
+				{% if page.icon_block_list %}
+					{% include icon_block_list.html icons=page.icon_block_list %}
+				{% endif %}
+				<div class="card-action">
+					{% if page.social %}
+						{% if page.social.facebook %}
+							<a href="{{ page.social.facebook }}">Facebook</a>
+						{% else %}
+							<a href="{{ site.data.generic.facebook_url }}">Instagram</a>
+						{% endif %}
+						{% if page.social.instagram %}
+							<a href="{{ page.social.instagram }}">Instagram</a>
+						{% else %}
+							<a href="{{ site.data.generic.instagram_url }}">Instagram</a>
+						{% endif %}
+					{% endif %}
+				</div>
+			</div>
+		{% endif %}
+		<div class="carousel carousel-slider">
+			<a class="carousel-item" href="#one!"><img src="https://lorempixel.com/800/400/food/1"></a>
+			<a class="carousel-item" href="#two!"><img src="https://lorempixel.com/800/400/food/2"></a>
+			<a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
+			<a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
+		</div>
+	</div>
+</div>
+<script>
+	let ac = document.getElementsById("add-calendar");
+	//ac.href
+</script>
+
 {% if page.locandina %}
 <div class="row">
 	<div class="col l8 offset-l2 m8 offset-m2 s8 offset-s2">
@@ -114,8 +195,8 @@ credits:
 
 {% if page.social %}
     <div class="row">
-        <div class="col s10 offset-s1" style="text-align:justify">
-            Per altre informazioni visita i nostri social:
+        <div class="col s10 offset-s1" style="text-align:center">
+            Per altre informazioni visita i nostri social
         </div>
     </div>
 	<div class="row">
@@ -138,7 +219,7 @@ credits:
 
 {% if page.credits %}
 <div class="row">
-	<div class="col s8 offset-s2" style="text-align:justify">
+	<div class="col s8 offset-s2" style="text-align:center">
 		<i>{{ page.credits }}</i><br/><br/>
 	</div>
 </div>
