--- a/_includes/icon_block_list.html
+++ b/_includes/icon_block_list.html
@@ -3,7 +3,7 @@
 		<li class="collection-item avatar" style="border: none;">
 			<i class="material-icons circle">{{ item.icon }}</i>
 			<span class="title">{{ item.name }}</span>
-			<p>{{ item.text }}</p>
+			<p class="text-icon">{{ item.text }}</p>
 		</li>
 	{% endfor %}
 </ul>
