--- a/_layouts/corso_evento.html
+++ b/_layouts/corso_evento.html
@@ -55,15 +55,15 @@ credits:
 		{% if page.locandina %}
 			<div class="card">
 				<div class="card-image">
-					<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 8px; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
+					<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
 					<img src="{{ site.url }}/{{ page.locandina.url }}" alt="{{ page.locandina.alt }}">
 					{% if page.title %}
 						<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ page.title }}</span>
 					{% endif %}
-					<a id="add-calendar" class="btn-floating halfway-fab btn-large waves-effect waves-light custom1"><i class="material-icons">add</i></a id="add-calendar">
+					<a target="_blank" id="add-calendar" class="btn-floating halfway-fab btn-large waves-effect waves-light custom1"><i class="material-icons">add</i></a id="add-calendar">
 				</div>
 				<div class="card-content">
-					<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+					<p id="incipit">{{page.descrizione}}</p>
 					{% if page.credits %}
 						<div class="thanks" style="margin-top: 8px; font-weight: bold; display:block;">Ringraziamenti:</div>
 						<p>{{ page.credits }}</p>
@@ -73,18 +73,9 @@ credits:
 					{% include icon_block_list.html icons=page.icon_block_list %}
 				{% endif %}
 				<div class="card-action">
-					{% if page.social %}
-						{% if page.social.facebook %}
-							<a href="{{ page.social.facebook }}">Facebook</a>
-						{% else %}
-							<a href="{{ site.data.generic.facebook_url }}">Instagram</a>
-						{% endif %}
-						{% if page.social.instagram %}
-							<a href="{{ page.social.instagram }}">Instagram</a>
-						{% else %}
-							<a href="{{ site.data.generic.instagram_url }}">Instagram</a>
-						{% endif %}
-					{% endif %}
+					{% for social in page.social %}
+						<a href="{{social.url}}">{{social.name}}</a>
+					{% endfor %}
 				</div>
 			</div>
 		{% else %}
@@ -93,7 +84,7 @@ credits:
 					{% if page.title %}
 						<span class="card-title" style="color: black;">{{ page.title }}</span>
 					{% endif %}
-					<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+					<p id="incipit">{{page.incipit}}</p>
 					{% if page.credits %}
 						<div class="thanks" style="margin-top: 8px; font-weight: bold; display:block;">Ringraziamenti:</div>
 						<p>{{ page.credits }}</p>
@@ -103,124 +94,42 @@ credits:
 					{% include icon_block_list.html icons=page.icon_block_list %}
 				{% endif %}
 				<div class="card-action">
-					{% if page.social %}
-						{% if page.social.facebook %}
-							<a href="{{ page.social.facebook }}">Facebook</a>
-						{% else %}
-							<a href="{{ site.data.generic.facebook_url }}">Instagram</a>
-						{% endif %}
-						{% if page.social.instagram %}
-							<a href="{{ page.social.instagram }}">Instagram</a>
-						{% else %}
-							<a href="{{ site.data.generic.instagram_url }}">Instagram</a>
-						{% endif %}
-					{% endif %}
+					{% for social in page.social %}
+						<a target="_blank" href="{{social.url}}">{{social.name}}</a>
+					{% endfor %}
 				</div>
 			</div>
 		{% endif %}
-		<div class="carousel carousel-slider">
-			<a class="carousel-item" href="#one!"><img src="https://lorempixel.com/800/400/food/1"></a>
-			<a class="carousel-item" href="#two!"><img src="https://lorempixel.com/800/400/food/2"></a>
-			<a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
-			<a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
-		</div>
+		{% if page.slides %}
+			<div class="carousel carousel-slider">
+				{% for slide in page.slides %}
+					<a class="carousel-item" href="#"><img src="{{slide.url}}"></a>
+				{% endfor %}
+			</div>
+		{% endif %}
 	</div>
 </div>
 <script>
-	let ac = document.getElementsById("add-calendar");
-	//ac.href
-</script>
-
-{% if page.locandina %}
-<div class="row">
-	<div class="col l8 offset-l2 m8 offset-m2 s8 offset-s2">
-		<img src="{{ site.url }}/{{ page.locandina.url }}" alt="{{ page.locandina.alt }}">
-	</div>
-</div>
-{% endif %}
-
-{% if page.incipit %}
-<div class="row">
-	<div class="col s8 offset-s2" style="text-align:justify">
-		<b>{{ page.incipit }}</b></br>
-	</div>
-</div>
-{% endif %}
-
-{% if page.icon_block_list %}
-	{% include icon_block_list.html icons=page.icon_block_list %}
-{% endif %}
-
-{{ content }}
-
-{% if page.button_list or page.button_collection or page.button_intro %}
-<div class="card horizontal">
-	<div class="card-content">
+	let ac = document.getElementById("add-calendar");
+	let when = document.getElementsByClassName("text-icon")[1].innerHTML.split(" ");
+	let date = when[0].split('/').reverse().join('-');
+	let time = when[2];
+	let mills = Date.parse(date + 'T' + time);
+	let millsNow = Date.now();
+	if(mills > millsNow){
+		let title = document.getElementsByClassName('card-title')[0].innerHTML;
+		let incipit = document.getElementsByClassName("text-icon")[0].innerHTML;
+		let endTime = time.split(':');
+		endTime.push('00');
+		let start = date.split('-').join('') + 'T' + endTime.join('');
+		endTime[0] = (parseInt(endTime[0]) + 2).toString();
+		let end = date.split('-').join('') + 'T' + endTime.join('');
+		let location = document.getElementsByClassName('text-icon')[0].innerHTML;
+		let link = "https://calendar.google.com/calendar/render?action=TEMPLATE&text=" + title + "&dates=" + start + "/" + end + "&details="+incipit+"&location=" + location;
+		ac.href = link;
+		console.log(ac.href);
+	}else{
+		ac.classList.add('disabled');
+	}
 	
-		{% if page.button_intro %}
-		<div class="row" style="text-align:justify">
-			{{ page.button_intro }}
-		</div>
-		{% endif %}
-		
-		{% if page.button_list %}
-			{% include button_list.html buttons=page.button_list %}
-		{% endif %}
-		
-		{% if page.button_collection %}
-		<ul class="collection">
-			<li><div class="row"></div></li>
-			{% for item in page.button_collection %}
-			<li>
-				<div class="row">
-					<div class="col l4 m4 s12 center">
-						{% if item.download %}
-						<a href="{{ site.url }}/{{ item.url }}" id="l1" class="btn-large waves-effect waves-light" download>{{ item.name }}</a>
-						{% else %}
-						<a href="{{ site.url }}/{{ item.url }}" id="l1" class="btn-large waves-effect waves-light">{{ item.name }}</a>
-						{% endif %}
-					</div>
-					<div class="col l8 m8 s12 center">
-						<br/>{{ item.text }}
-					</div>
-				</div>
-			</li>
-			{% endfor %}
-		</ul>
-		{% endif %}
-		
-	</div>
-</div>
-{% endif %}
-
-{% if page.social %}
-    <div class="row">
-        <div class="col s10 offset-s1" style="text-align:center">
-            Per altre informazioni visita i nostri social
-        </div>
-    </div>
-	<div class="row">
-		<div class="col l3 offset-l3 m3 offset-m3 s4 offset-s2 center">
-			{% if page.social.facebook %}
-				<a href="{{ page.social.facebook }}" class="fa fa-facebook fa-5x"></a>
-			{% else %}
-				<a href="{{ site.data.generic.facebook_url }}" class="fa fa-instagram fa-5x"></a>
-			{% endif %}
-		</div>
-		<div class="col l3 m3 s4 center">
-			{% if page.social.instagram %}
-				<a href="{{ page.social.instagram }}" class="fa fa-instagram fa-5x"></a>
-			{% else %}
-				<a href="{{ site.data.generic.instagram_url }}" class="fa fa-instagram fa-5x"></a>
-			{% endif %}
-		</div>
-	</div>
-{% endif %}
-
-{% if page.credits %}
-<div class="row">
-	<div class="col s8 offset-s2" style="text-align:center">
-		<i>{{ page.credits }}</i><br/><br/>
-	</div>
-</div>
-{% endif %}
+</script>
