--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -24,15 +24,15 @@ span {
     color: $secondary-color
 }
 
-.carousel {
-    height: 500px;
-    .carousel-item {
-	width: 500px;
-	img {
-	    width:100%;
-	}
-    }
-}
+// .carousel {
+//     height: 500px;
+//     .carousel-item {
+// 	width: 500px;
+// 	img {
+// 	    width:100%;
+// 	}
+//     }
+// }
 
 @import "custom_c/events";
 @import "custom_c/article";
