--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -41,11 +41,29 @@
         {% endfor %}
         </ul>
         <ul id="slide-out" class="sidenav">
-          <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-          <li><a href="#!">Second Link</a></li>
-          <li><div class="divider"></div></li>
-          <li><a class="subheader">Subheader</a></li>
-          <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+          {% for item in include.nav %}
+            {% if item.subitems %}
+            <li>
+              <a class="dropdown-button" href="{{ site.url }}/{{ item.url }}" data-target="dropdown-{{ item.slug }}">{{ item.text }}<i class="material-icons right">arrow_drop_down</i></a>
+            </li>
+            {% else %}
+              <li>
+                  <a 
+                    {% if item.url contains "http://" %}
+                        href="{{ item.url }}"
+                    {% else %}
+                        href="{{ site.url }}/{{ item.url }}"
+                    {% endif %}
+                    >
+                      {% if item.url == navurl %}
+                          <b>{{ item.text }}</b>
+                      {% else %}
+                          {{ item.text }}
+                      {% endif %}
+                  </a>
+              </li>
+              {% endif %}
+          {% endfor %}
         </ul>
         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <!--<ul id="nav-mobile" class="sidenav">
