--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,7 @@
 <div id="index-banner">
   <div class="row">
     <div class="col l4 offset-l4 s6 offset-s3">
+    <!--<div class="col l2 offset-l3 s6 offset-s3">-->
       <h1>
          <img id="index-top-logo" src="{{ site.url }}/{{ site.data.home.banner }}" alt="AISF Palermo logo">
       </h1>
