--- a/_layouts/corso_evento.html
+++ b/_layouts/corso_evento.html
@@ -56,7 +56,7 @@ credits:
 			<div class="card">
 				<div class="card-image">
 					<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
-					<img src="{{ site.url }}/{{ page.locandina.url }}" alt="{{ page.locandina.alt }}">
+					<img src="{{ page.locandina }}">
 					{% if page.title %}
 						<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ page.title }}</span>
 					{% endif %}
