--- a/_layouts/corso_evento.html
+++ b/_layouts/corso_evento.html
@@ -51,19 +51,19 @@ credits:
 -->
 
 <div class="row">
-	<div class="col l8 offset-l2 m8 offset-m2 s8 offset-s2">
+	<div class="col l8 offset-l2 m10 offset-m1 s12">
 		{% if page.locandina %}
 			<div class="card">
 				<div class="card-image">
 					<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
 					<img src="{{ page.locandina }}">
-					{% if page.title %}
-						<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ page.title }}</span>
-					{% endif %}
 					<a target="_blank" id="add-calendar" class="btn-floating halfway-fab btn-large waves-effect waves-light custom1"><i class="material-icons">add</i></a id="add-calendar">
 				</div>
 				<div class="card-content">
-					<p id="incipit">{{page.descrizione}}</p>
+					{% if page.title %}
+						<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ page.title }}</span>
+					{% endif %}
+					<p id="incipit">{{ content }}</p>
 					{% if page.credits %}
 						<div class="thanks" style="margin-top: 8px; font-weight: bold; display:block;">Ringraziamenti:</div>
 						<p>{{ page.credits }}</p>
@@ -84,7 +84,7 @@ credits:
 					{% if page.title %}
 						<span class="card-title" style="color: black;">{{ page.title }}</span>
 					{% endif %}
-					<p id="incipit">{{page.incipit}}</p>
+					<p id="incipit">{{ content }}</p>
 					{% if page.credits %}
 						<div class="thanks" style="margin-top: 8px; font-weight: bold; display:block;">Ringraziamenti:</div>
 						<p>{{ page.credits }}</p>
