--- a/_layouts/corso_evento.html
+++ b/_layouts/corso_evento.html
@@ -56,7 +56,7 @@ credits:
 			<div class="card">
 				<div class="card-image">
 					<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
-					<img src="{{ page.locandina }}">
+					<img src="{{ site.url }}{{ page.locandina }}">
 					<a target="_blank" id="add-calendar" class="btn-floating halfway-fab btn-large waves-effect waves-light custom1"><i class="material-icons">add</i></a id="add-calendar">
 				</div>
 				<div class="card-content">
