--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -72,6 +72,7 @@ nav {
     @media #{$medium-and-down} {
       left: 50%;
       transform: translateX(-50%);
+      white-space: nowrap;
 
       &.left, &.right {
         padding: 0;
